# rust-ogc-api-feature-server

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  config.toml
src/: config.rs  main.rs  routes.rs  state.rs
src/handlers/: core.rs  features.rs  mod.rs
src/models/: mod.rs
src/models/common/: link.rs
src/models/core/: collection.rs  conformance.rs  landing.rs  mod.rs
src/models/features/: feature_collection.rs  mod.rs  parameters.rs  schema.rs
src/storage/: mod.rs  store.rs
src/storage/drivers/: mod.rs  postgis.rs
