[package]
name = "rust_ogc_features_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
geojson = "0.24.2"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.13"
serde_json = "1.0.141"
dotenvy = "0.15.7"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
